Added gitignore for temp.yaml and refactored YAML and Jinja handling in dump_samples.py.

--- a/tests/transaction_samples.yaml
+++ b/tests/transaction_samples.yaml
@@ -1,15 +1,11 @@
 transaction_samples:
-  - name: simple-transaction
-  - name: posting-flagged-transaction
-  - name: posting-tagged-transaction
-  - name: posting-commented-transaction
   - transaction_data:
       date: '2023-04-01'
       postings:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01\n\n  Assets:Bank  100.00\n"
-  - name: flagged-transaction
+    name: 'minimal'
   - transaction_data:
       date: '2023-04-01'
       status: '!'
@@ -17,7 +13,7 @@ transaction_samples:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01 !\n\n  Assets:Bank  100.00\n"
-  - name: coded-transaction
+    name: 'transact-status'
   - transaction_data:
       date: '2023-04-01'
       code: 'INV123'
@@ -25,7 +21,7 @@ transaction_samples:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01 INV123\n\n  Assets:Bank  100.00\n"
-  - name: described-transaction
+    name: 'transact-code'
   - transaction_data:
       date: '2023-04-01'
       description: 'Invoice Payment'
@@ -33,7 +29,7 @@ transaction_samples:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01 Invoice Payment\n\n  Assets:Bank  100.00\n"
-  - name: tagged-transaction
+    name: 'transact-description'
   - transaction_data:
       date: '2023-04-01'
       tags:
@@ -42,7 +38,17 @@ transaction_samples:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01\n  ; Payee: Client A\n\n  Assets:Bank  100.00\n"
-  - name: commented-transaction
+    name: 'transact-tag'
+  - transaction_data:
+      date: '2023-04-01'
+      tags:
+        Payee: 'Client A'
+        Type: 'Internal'
+      postings:
+        - account_name: 'Assets:Bank'
+          amount: '100.00'
+    expected_output: "2023-04-01\n  ; Payee: Client A\n\n  Assets:Bank  100.00\n"
+    name: 'transact-tag-multiple'
   - transaction_data:
       date: '2023-04-01'
       comments: ['Payment received']
@@ -50,9 +56,15 @@ transaction_samples:
         - account_name: 'Assets:Bank'
           amount: '100.00'
     expected_output: "2023-04-01\n  ; Payment received\n\n  Assets:Bank  100.00\n"
-  - name: posting-flagged-transaction
-  - name: posting-tagged-transaction
-  - name: posting-commented-transaction
+    name: 'transact-comment'
+  - transaction_data:
+      date: '2023-04-01'
+      comments: ['Payment received', 'Late']
+      postings:
+        - account_name: 'Assets:Bank'
+          amount: '100.00'
+    expected_output: "2023-04-01\n  ; Payment received\n\n  Assets:Bank  100.00\n"
+    name: 'transact-comment-multiple'
   - transaction_data:
       date: '2023-04-01'
       postings:
@@ -60,9 +72,7 @@ transaction_samples:
           amount: '100.00'
           status: '!'
     expected_output: "2023-04-01\n\n! Assets:Bank  100.00\n"
-  - name: posting-flagged-transaction
-  - name: posting-tagged-transaction
-  - name: posting-commented-transaction
+    name: 'post-status'
   - transaction_data:
       date: '2023-04-01'
       postings:
@@ -71,9 +81,17 @@ transaction_samples:
           tags:
             Category: 'Income'
     expected_output: "2023-04-01\n\n  Assets:Bank  100.00\n  ; Category: Income\n"
-  - name: posting-flagged-transaction
-  - name: posting-tagged-transaction
-  - name: posting-commented-transaction
+    name: 'post-tag'
+  - transaction_data:
+      date: '2023-04-01'
+      postings:
+        - account_name: 'Assets:Bank'
+          amount: '100.00'
+          tags:
+            Category: 'Income'
+            Type: 'Passive'
+    expected_output: "2023-04-01\n\n  Assets:Bank  100.00\n  ; Category: Income\n"
+    name: 'post-tag-multiple'
   - transaction_data:
       date: '2023-04-01'
       postings:
@@ -81,3 +99,12 @@ transaction_samples:
           amount: '100.00'
           comments: ['Deposit']
     expected_output: "2023-04-01\n\n  Assets:Bank  100.00\n  ; Deposit\n"
+    name: 'post-comment'
+  - transaction_data:
+      date: '2023-04-01'
+      postings:
+        - account_name: 'Assets:Bank'
+          amount: '100.00'
+          comments: ['Deposit', 'Early']
+    expected_output: "2023-04-01\n\n  Assets:Bank  100.00\n  ; Deposit\n"
+    name: 'post-comment-multiple'
